Renaming to accessopp

--- a/example_notebooks/hexagonal_grid_example/1-- create_hexagonal_grid.ipynb
+++ b/example_notebooks/hexagonal_grid_example/1-- create_hexagonal_grid.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Create a hexagon grid covering Toronto\n",
     "\n",
-    "This example shows how to use the `accessto.point.build_haxagonal_grid` function to build a hexagonal grid covering Toronto,\n",
+    "This example shows how to use the `accessopp.point.build_haxagonal_grid` function to build a hexagonal grid covering Toronto,\n",
     "is trimmed at the boundaries to follow Toronto's boundaries. \n",
     "\n",
     "The steps used in this example are as follows:\n",
@@ -30,7 +30,7 @@
     "from pathlib import Path\n",
     "from shapely import Point\n",
     "\n",
-    "from accessto.points import build_haxagonal_grid"
+    "from accessopp.points import build_haxagonal_grid"
    ]
   },
   {
