--- a/example_notebooks/hexagonal_grid_example/3--calculate_access_to_grocery_stores.ipynb
+++ b/example_notebooks/hexagonal_grid_example/3--calculate_access_to_grocery_stores.ipynb
@@ -21,8 +21,8 @@
     "import geopandas as gpd\n",
     "from pathlib import Path\n",
     "\n",
-    "from accessto.access_opportunities import nth_closest_opportunity\n",
-    "from accessto.r5py_travel_time_computer import R5PYTravelTimeComputer"
+    "from accessopp.access_opportunities import nth_closest_opportunity\n",
+    "from accessopp.r5py_travel_time_computer import R5PYTravelTimeComputer"
    ]
   },
   {
