--- a/example_notebooks/otp/run_otp_on_testdata.ipynb
+++ b/example_notebooks/otp/run_otp_on_testdata.ipynb
@@ -29,8 +29,8 @@
     "    \"from pathlib import Path\\n\",\n",
     "    \"from shapely import Point\\n\",\n",
     "    \"import webbrowser\\n\",\n",
-    "    \"import accessto\\n\",\n",
-    "    \"from accessto.otp2_travel_time_computer import OTP2TravelTimeComputer\"\n",
+    "    \"import accessopp\\n\",\n",
+    "    \"from accessopp.otp2_travel_time_computer import OTP2TravelTimeComputer\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
@@ -59,7 +59,7 @@
     "   \"id\": \"218d50e0-8534-4304-b44e-52c07ac487ab\",\n",
     "   \"metadata\": {},\n",
     "   \"source\": [\n",
-    "    \"## Find the path to the test network saved as part of the `accessto` package\"\n",
+    "    \"## Find the path to the test network saved as part of the `accessopp` package\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
@@ -71,7 +71,7 @@
     "    {\n",
     "     \"data\": {\n",
     "      \"text/plain\": [\n",
-    "       \"WindowsPath('C:/Users/apullar/Documents/1.Accessibility_Model/accessto/tests/test_data/network')\"\n",
+    "       \"WindowsPath('C:/Users/apullar/Documents/1.Accessibility_Model/accessopp/tests/test_data/network')\"\n",
     "      ]\n",
     "     },\n",
     "     \"execution_count\": 3,\n",
@@ -80,7 +80,7 @@
     "    }\n",
     "   ],\n",
     "   \"source\": [\n",
-    "    \"src_path = Path(accessto.__path__[0])\\n\",\n",
+    "    \"src_path = Path(accessopp.__path__[0])\\n\",\n",
     "    \"root_path = src_path.parents[1]\\n\",\n",
     "    \"testdata_network_path = root_path / \\\"tests/test_data/network\\\"\\n\",\n",
     "    \"testdata_network_path\"\n",
